<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_id"/>
        <TextView
            android:id="@+id/name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_below="@id/text_id"
            style="@style/AppTheme.Sideheadings" />

        <EditText
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_id"
            android:layout_toEndOf="@id/name_id"
            android:layout_toRightOf="@id/name_id" />

        <TextView
            android:id="@+id/gender_male_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_id"
            android:text="@string/Student_Gender"
            style="@style/AppTheme.Sideheadings" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender_radio_group"
            android:layout_below="@id/name_id"
            android:layout_toEndOf="@id/gender_male_female"
            android:layout_toRightOf="@id/gender_male_female"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/G_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                style="@style/AppTheme.OptionsGender" />

            <RadioButton
                android:id="@+id/G_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                style="@style/AppTheme.OptionsGender" />
        </RadioGroup>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mode_paper"
            android:layout_below="@id/gender_radio_group"
            android:text="@string/mode_question_paper"
            style="@style/AppTheme.Sideheadings"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mode_paper"
            android:orientation="vertical"
            android:id="@+id/modes"
            android:layout_centerHorizontal="true">
            <RadioButton
                android:text="@string/easy_mode"
                android:id="@+id/easy_paper_mode"
                style="@style/AppTheme.OptionsMode"/>
            <RadioButton
                android:text="@string/medium_mode"
                android:id="@+id/medium_paper_mode"
                style="@style/AppTheme.OptionsMode"/>
            <RadioButton
                android:id="@+id/tough_paper_mode"
                android:text="@string/tough_mode"
                style="@style/AppTheme.OptionsMode"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10sp"
            android:layout_below="@id/modes"
            android:onClick="StartQuiz"
            android:text="@string/quiz_confirm"/>
    </RelativeLayout>
</ScrollView>