<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalAnswer">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalAnswer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="50sp"
        android:textColor="#01579B"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/attempt_questions"
                style="@style/AppTheme.Markslist"
                android:text="@string/attempt"/>

            <TextView
                android:id="@+id/attempt_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_toRightOf="@id/attempt_questions"
                android:layout_toEndOf="@id/attempt_questions"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/correct_answers"
                style="@style/AppTheme.Markslist"
                android:text="@string/correct"
                android:layout_below="@id/attempt_questions"/>

            <TextView
                android:id="@+id/correct_number"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/correct_answers"
                android:layout_toEndOf="@id/correct_answers"
                android:layout_below="@id/attempt_questions"
                android:text="0"/>

            <TextView
                android:id="@+id/wrong_answers"
                style="@style/AppTheme.Markslist"
                android:text="@string/wrong"
                android:layout_below="@id/correct_answers"/>

            <TextView
                android:id="@+id/wrong_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/wrong_answers"
                android:layout_toEndOf="@id/wrong_answers"
                android:layout_below="@id/correct_answers"
                android:text="0"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/total_marks"
                style="@style/AppTheme.Markslist"
                android:text="@string/total"
                android:layout_below="@id/wrong_answers"/>

            <TextView
                android:id="@+id/total_marks_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/total_marks"
                android:layout_toEndOf="@id/total_marks"
                android:layout_below="@id/wrong_answers"
                android:text="0"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/Grade"
                style="@style/AppTheme.Markslist"
                android:text="@string/grade"
                android:layout_below="@id/total_marks"/>

            <TextView
                android:id="@+id/Grade_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Grade"
                android:layout_toEndOf="@id/Grade"
                android:layout_below="@id/total_marks"
                android:text="-"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Grade"
                android:text="@string/text"
                android:textSize="15sp"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>